<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/yll"
        tools:context=".view.formcadastro.FormCadastro">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:src="@drawable/scholl" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintemail"
            android:background="@color/white"
            android:padding="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edit_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintsenha"
            android:background="@color/white"
            android:padding="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:inputType="numberPassword"
            />

        <Button
            android:id="@+id/bt_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_bt_logar"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="15dp"
            android:backgroundTint="@color/black"
            android:layout_margin="25dp"
            />

        <TextView
            android:id="@+id/txt_telaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_tela_cad"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/txt_motorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login para Motoristas!"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
